CMBSandbox4/src/objects/Incident_Log__c.object
<CustomObject>
    <description>The Incident Log is used to track incidents and resolutions for future references.</description>
    <fields>
        <fullName>Completed_On__c</fullName>
        <label>Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <inlineHelpText>The incident was in which environment? 
Naming Convention: Sandbox/ Production - {Name}</inlineHelpText>
        <label>Environment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Details__c</fullName>
        <description>Details of the issue as logged by the client</description>
        <inlineHelpText>Details of the issue as logged by the client</inlineHelpText>
        <label>Incident Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Users_Impacted__c</fullName>
        <label>No. of Users Impacted</label>
        <picklist>
            <picklistValues>
                <fullName>0 -20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21- 50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;50%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_hours_spent__c</fullName>
        <inlineHelpText>Number of hours spent in resolving the issue</inlineHelpText>
        <label>No. of hours spent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related to Project</description>
        <inlineHelpText>Related to Project</inlineHelpText>
        <label>Project</label>
        <referenceTo>HarvestProject__c</referenceTo>
        <relationshipLabel>Incident Log</relationshipLabel>
        <relationshipName>Incident_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Notes__c</fullName>
        <inlineHelpText>Testing results, any concerns that show up during during testing.</inlineHelpText>
        <label>Test Notes</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Incident Log</label>
    <nameField>
        <displayFormat>ILN - {00000}</displayFormat>
        <label>Incident Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>